--- a/src/app/templates/404.html
+++ b/src/app/templates/404.html
@@ -14,7 +14,7 @@
             <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">
                 <i class="fas fa-home"></i> Go Home
             </a>
-            <a href="{{ url_for('assignment.list') }}" class="btn btn-outline-primary btn-lg">
+            <a href="{{ url_for('assignments') }}" class="btn btn-outline-primary btn-lg">
                 <i class="fas fa-list"></i> Browse Assignments
             </a>
         </div>
