--- a/src/app/templates/submission_results.html
+++ b/src/app/templates/submission_results.html
@@ -6,8 +6,8 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ url_for('index') }}">Home</a></li>
-        <li class="breadcrumb-item"><a href="{{ url_for('assignment.list') }}">Assignments</a></li>
-        <li class="breadcrumb-item"><a href="{{ url_for('assignment.view', assignment_id=submission.assignment.id) }}">{{ submission.assignment.title }}</a></li>
+        <li class="breadcrumb-item"><a href="{{ url_for('assignments') }}">Assignments</a></li>
+        <li class="breadcrumb-item"><a href="{{ url_for('assignment_detail', assignment_id=submission.assignment.id) }}">{{ submission.assignment.title }}</a></li>
         <li class="breadcrumb-item active" aria-current="page">Submission Results</li>
     </ol>
 </nav>
